syntax = "proto3";

package com.playground.sbeaeronvirtualthreads.proto;

option java_package = "com.playground.sbeaeronvirtualthreads.proto";
option java_outer_classname = "Messages";
option java_multiple_files = true;

message TradeMessage {
  int64 trade_id = 1;
  int64 timestamp = 2;
  double price = 3;
  int32 quantity = 4;
  string side = 5;
  string symbol = 6;
  string counterparty = 7;
}

message MarketDataMessage {
  int64 timestamp = 1;
  double bid_price = 2;
  double ask_price = 3;
  int32 bid_size = 4;
  int32 ask_size = 5;
  string symbol = 6;
}

message PerformanceMetrics {
  int64 message_count = 1;
  int64 total_bytes = 2;
  int64 average_latency_nanos = 3;
  int64 min_latency_nanos = 4;
  int64 max_latency_nanos = 5;
  string test_name = 6;
}
